[project]
name = "langchain-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "certifi>=2026.4.22",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.2.16",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "pandas>=3.0.2",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
]
